[project]
name = "watchtower"
description = "Python CloudWatch Logging"
readme = "README.rst"
requires-python = ">=3.8"
license = { text = "Apache Software License" }
authors = [{ name = "Andrey Kislyuk"}, {email = "kislyuk@gmail.com" }]
maintainers = [{ name = "Andrey Kislyuk"}, {email = "kislyuk@gmail.com" }]
dynamic = ["version"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Development Status :: 5 - Production/Stable",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "boto3 >= 1.9.253, < 2",
]

[project.optional-dependencies]
test = ["pyyaml", "coverage", "build", "wheel", "ruff", "mypy"]

[project.urls]
"Homepage"= "https://github.com/kislyuk/watchtower"
"Documentation"= "https://kislyuk.github.io/watchtower"
"Source Code"= "https://github.com/kislyuk/watchtower"
"Issue Tracker"= "https://github.com/kislyuk/watchtower/issues"
"Change Log"= "https://github.com/kislyuk/watchtower/blob/develop/Changes.rst"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true

[[tool.mypy.overrides]]
module = ["boto3.*", "botocore.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
