[metadata]
name = watchtower
version = 0.8.0
url = https://github.com/kislyuk/watchtower
license = Apache Software License
author = Andrey Kislyuk
author_email = kislyuk@gmail.com
description = Python CloudWatch Logging
long_description = file: README.rst
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
packages = find:
python_requires = >=3.5
install_requires =
    boto3 >=1.9.253,<2

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length=120
ignore: E301, E401
